#18 Overflow on container Fixed

--- a/lb-contest-front/src/assets/scss/components/BottomBar.scss
+++ b/lb-contest-front/src/assets/scss/components/BottomBar.scss
@@ -1,5 +1,6 @@
 .bottom-bar {
-    background-color: #FFFFFF;
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(10px);
     border-radius: 5px;
     padding: 6px;
 
