--- a/lb-contest-front/src/assets/scss/components/Form.scss
+++ b/lb-contest-front/src/assets/scss/components/Form.scss
@@ -32,6 +32,12 @@
         background-position-y: center;
     }
 
+    @media (max-height: 768px) {
+        min-height: 100vh;
+        height: auto;
+        padding: 6.25vh 30px;
+    }
+
     &__form {
         display: flex;
         flex-direction: column;
@@ -69,9 +75,14 @@
             margin-bottom: 24px;
             max-width: 494px;
 
-            @media (max-width: 500px) {
+            @media (max-width: 767px) {
                 font-size: 40px;
                 line-height: 56px;
+            }
+
+            @media (min-width: 769px) and (max-height: 735px) {
+                font-size: 52px;
+                line-height: 74px;
             }
         }
     }
