--- a/lb-contest-front/src/assets/scss/components/ScoreBoard.scss
+++ b/lb-contest-front/src/assets/scss/components/ScoreBoard.scss
@@ -1,5 +1,6 @@
 .score-board {
-    background-color: #FFFFFF;
+    background-color: rgba(255, 255, 255, 0.7);
+    backdrop-filter: blur(10px);
     padding: 6px;
     border-radius: 5px;
 
