--- a/lb-contest-front/src/assets/scss/components/WinPage.scss
+++ b/lb-contest-front/src/assets/scss/components/WinPage.scss
@@ -25,6 +25,12 @@
         background-image: url('../../img/main-bgd-mobile.png')  !important;
     }
 
+    @media (max-height: 768px) {
+        min-height: 100vh;
+        height: auto;
+        padding: 6.25vh 30px;
+    }
+
     &.version-2 {
         .win-page {
             &__img {
@@ -97,6 +103,11 @@
                 font-size: 40px;
                 line-height: 56px;
             }
+
+            @media (min-width: 769px) and (max-height: 735px) {
+                font-size: 52px;
+                line-height: 74px;
+            }
         }
 
         h2 {
@@ -115,6 +126,11 @@
                 font-size: 19px;
                 line-height: 32px;
                 // max-width: 286px;
+            }
+
+            @media (min-width: 769px) and (max-height: 735px) {
+                font-size: 24px;
+                line-height: 42px;
             }
         }
 
@@ -135,6 +151,11 @@
 
                     @media (max-width: 767px) {
                         padding: 8px 18px;
+                        font-size: 20px;
+                        line-height: 28px;
+                    }
+
+                    @media (min-width: 769px) and (max-height: 735px) {
                         font-size: 20px;
                         line-height: 28px;
                     }
